[project]
name = "relay"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Katsuyuki-Karasawa", email = "4ranci0ne@gmail.com" }
]
dependencies = [
    "matplotlib>=3.7.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
